BPER/DEVF/force-app/main/default/objects/Alert_Contact_Center__c/Alert_Contact_Center__c.object-meta.xml
<CustomObject>
    <label>Alert Contact Center</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Alert Contact Center Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alerts Contact Center</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>