BPER/DEVF/force-app/main/default/objects/Alert_Contact_Center__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Alerts Contact Center</relationshipLabel>
    <relationshipName>Alerts_Contact_Center</relationshipName>
    <type>Lookup</type>
</CustomField>