BPER/DEVF/force-app/main/default/objects/Alert_Contact_Center__c/fields/CC_Alert_Is_Populated__c.field-meta.xml
<CustomField>
    <fullName>CC_Alert_Is_Populated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Campo Alert Popolato</label>
    <type>Checkbox</type>
</CustomField>