BPER/DEVF/force-app/main/default/objects/Alert_Contact_Center__c/fields/CC_Alert_Messaggio_Cliente__c.field-meta.xml
<CustomField>
    <fullName>CC_Alert_Messaggio_Cliente__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alert Messaggio Cliente</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>