BPER/DEVF/force-app/main/default/objects/Alert_Contact_Center__c/fields/CC_Storico_Alert_Cliente__c.field-meta.xml
<CustomField>
    <fullName>CC_Storico_Alert_Cliente__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Storico Alert Cliente</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>